# fprime-layout

./: .gitignore  README.adoc  build.sbt  clean  install  test
.github/workflows/: build-native.yml  publish.yml
examples/: README.adoc
examples/ref/: .gitignore  README.adoc  RefTopologyAppAi.xml  build  clean
examples/ref/RateGroups/: RateGroups.eps  RateGroups.xml
lib/src/main/scala/codegen/: WriteJson.scala  WritePic.scala
lib/src/main/scala/input/: AsciiTable.scala  XmlReader.scala
lib/src/main/scala/layout/: AlphabetizeColumns.scala  ColumnVector.scala  ColumnVectorTransformer.scala  (+4 more)
scripts/: dot.awk  extract.awk  reorder  subdir_targets  table  utils.sh
tools/fpl-convert-xml/test/: .gitignore  Telemetry.ref.txt  run  tests.sh  update-ref
tools/fpl-extract-xml/: pyproject.toml
tools/fpl-extract-xml/src/: fpl-extract-xml  fpl-extract-xml.awk
tools/fpl-extract-xml/test/: .gitignore  RefTopologyAppAi.ref.txt  clean  run  tests.sh  update-ref
tools/fpl-extract-xml/test/RefTopologyAppAi/: CmdDisp.ref.xml  CmdReg.ref.xml  CmdReply.ref.xml  CommDriver.ref.xml  Downlink.ref.xml  Events.ref.xml  FaultProtection.ref.xml  Health.ref.xml  Parameters.ref.xml  Ref.ref.xml  Sequencer.ref.xml  Telemetry.ref.xml  TextEvents.ref.xml  Time.ref.xml  Uplink.ref.xml
tools/fpl-layout/test/: .gitignore  Telemetry.ref.txt  run  update-ref
tools/fpl-write-eps/src/: fpl-write-eps
tools/fpl-write-eps/test/: .gitignore  RateGroups.txt  run
tools/fpl-write-pic/test/: .gitignore  CmdReg.ref.t  CmdReg.txt  RateGroups.ref.t  Telemetry.ref.t  clean  run  update-ref
(+9 files in other folders)
